Remodel the Model
- The configuration and crypto model is now entirely independent
of Android classes other than Nullable and TextUtils.
- Model classes are immutable and use builders that enforce the
appropriate optional/required attributes.
- The Android config proxies (for Parcelable and databinding) are
moved to the Android side of the codebase, and are designed to be
safe for two-way databinding. This allows proper observability in
TunnelDetailFragment.
- Various robustness fixes and documentation updates to helper classes.

Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/layout/tunnel_detail_fragment.xml
+++ b/app/src/main/res/layout/tunnel_detail_fragment.xml
@@ -19,7 +19,7 @@
 
         <variable
             name="config"
-            type="com.wireguard.config.Config.Observable" />
+            type="com.wireguard.config.Config" />
     </data>
 
     <ScrollView
@@ -102,7 +102,7 @@
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:onClick="@{ClipboardUtils::copyTextView}"
-                        android:text="@{config.interfaceSection.publicKey}" />
+                        android:text="@{config.interface.keyPair.publicKey.toBase64}" />
 
                     <TextView
                         android:id="@+id/addresses_label"
@@ -120,7 +120,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/addresses_label"
                         android:contentDescription="@string/addresses"
-                        android:text="@{config.interfaceSection.addresses}" />
+                        android:text="@{config.interface.addresses}" />
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
 
