--- a/app/src/main/res/layout/tunnel_detail_peer.xml
+++ b/app/src/main/res/layout/tunnel_detail_peer.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="item"
-            type="com.wireguard.config.Peer.Observable" />
+            type="com.wireguard.config.Peer" />
     </data>
 
     <android.support.v7.widget.CardView
@@ -54,7 +54,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:onClick="@{ClipboardUtils::copyTextView}"
-                android:text="@{item.publicKey}" />
+                android:text="@{item.publicKey.toBase64}" />
 
             <TextView
                 android:id="@+id/allowed_ips_label"
@@ -71,7 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/allowed_ips_label"
-                android:text="@{item.allowedIPs}" />
+                android:text="@{item.allowedIps}" />
 
             <TextView
                 android:id="@+id/endpoint_label"
