--- a/app/src/main/res/layout/tunnel_editor_fragment.xml
+++ b/app/src/main/res/layout/tunnel_editor_fragment.xml
@@ -104,7 +104,7 @@
                         <Button
                             android:id="@+id/generate_private_key_button"
                             style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                            android:layout_width="96dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignBottom="@id/private_key_text"
                             android:layout_alignParentEnd="true"
