--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,8 @@
         <item name="colorBackground">@color/primary_color</item>
         <item name="colorMultiselectActiveBackground">@color/list_multiselect_background</item>
         <item name="colorControlNormal">@color/color_control_normal</item>
+        <item name="elevationOverlayColor">@color/primary_light_color</item>
+        <item name="elevationOverlayEnabled">true</item>
         <item name="android:statusBarColor">@color/status_bar_color</item>
         <item name="android:windowBackground">@color/primary_color</item>
         <item name="alertDialogTheme">@style/AppTheme.Dialog</item>
