--- a/app/src/main/res/layout/tunnel_editor_fragment.xml
+++ b/app/src/main/res/layout/tunnel_editor_fragment.xml
@@ -28,7 +28,7 @@
         android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?android:attr/colorBackground">
+        android:background="?attr/colorBackground">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -46,7 +46,7 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:background="?android:attr/colorBackground"
+                    android:background="?attr/colorBackground"
                     app:cardCornerRadius="4dp"
                     app:cardElevation="2dp"
                     app:contentPadding="8dp">
