Use sample data to provide interface names and checked state
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/app/src/main/res/layout/tunnel_list_item.xml
+++ b/app/src/main/res/layout/tunnel_list_item.xml
@@ -46,7 +46,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@{key}"
-            tools:text="wg0"/>
+            tools:text="@sample/interface_names.json/names/names/name" />
 
         <com.wireguard.android.widget.ToggleSwitch
             android:id="@+id/tunnel_switch"
@@ -57,6 +57,6 @@
             android:nextFocusLeft="@+id/tunnel_list_item"
             app:checked="@{item.state == State.UP}"
             app:onBeforeCheckedChanged="@{fragment::setTunnelState}"
-            tools:checked="true"/>
+            tools:checked="@sample/interface_names.json/names/checked/checked" />
     </com.wireguard.android.widget.MultiselectableRelativeLayout>
 </layout>
