Implement custom theming to match Google's AOSP design
Closes: #4
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/app/src/main/res/layout/tunnel_editor_fragment.xml
+++ b/app/src/main/res/layout/tunnel_editor_fragment.xml
@@ -28,7 +28,7 @@
         android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?android:attr/colorBackground">
+        android:background="?attr/colorBackground">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -46,7 +46,7 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:background="?android:attr/colorBackground"
+                    android:background="?attr/colorBackground"
                     app:cardCornerRadius="4dp"
                     app:cardElevation="2dp"
                     app:contentPadding="8dp">
@@ -104,7 +104,7 @@
                         <Button
                             android:id="@+id/generate_private_key_button"
                             style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                            android:layout_width="96dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignBottom="@id/private_key_text"
                             android:layout_alignParentEnd="true"
