--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,5 +4,18 @@
     <color name="fab_label_text_color">#000000</color>
     <color name="fab_label_background_color">#bbbbbb</color>
 
-    <color name="accent">#5e97f6</color>
+    <!-- Base palette -->
+    <color name="primary_color">#ff212121</color>
+    <color name="primary_light_color">#ff484848</color>
+    <color name="primary_dark_color">#ff000000</color>
+    <color name="secondary_color">#ff4285f4</color>
+    <color name="secondary_light_color">#ff80b4ff</color>
+    <color name="secondary_dark_color">#ff0059c1</color>
+    <color name="primary_text_color">#ffffffff</color>
+    <color name="secondary_text_color">#ffffffff</color>
+
+    <!-- Theme variables -->
+    <color name="list_multiselect_background">#1aeeeeee</color>
+    <color name="status_bar_color">#21242424</color>
+    <color name="navigation_bar_color">#aa242424</color>
 </resources>
