--- a/app/src/main/res/layout-sw600dp/main_activity.xml
+++ b/app/src/main/res/layout-sw600dp/main_activity.xml
@@ -10,14 +10,14 @@
     android:showDividers="middle"
     tools:context=".activity.MainActivity">
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:name="com.wireguard.android.fragment.TunnelListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:tag="LIST" />
 
-    <FrameLayout
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/detail_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
