backend: do not depend on anything except config
This is likely broken but should make for a good starting point.

It also should hopefully handle stopping tunnels before starting new
ones, in the case of the GoBackend. Again, untested.

Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/layout/tunnel_list_item.xml
+++ b/app/src/main/res/layout/tunnel_list_item.xml
@@ -5,13 +5,13 @@
 
     <data>
 
-        <import type="com.wireguard.android.model.Tunnel" />
+        <import type="com.wireguard.android.model.ObservableTunnel" />
 
-        <import type="com.wireguard.android.model.Tunnel.State" />
+        <import type="com.wireguard.android.backend.Tunnel.State" />
 
         <variable
             name="collection"
-            type="com.wireguard.android.util.ObservableKeyedList&lt;String, Tunnel&gt;" />
+            type="com.wireguard.android.util.ObservableKeyedList&lt;String, ObservableTunnel&gt;" />
 
         <variable
             name="key"
@@ -19,7 +19,7 @@
 
         <variable
             name="item"
-            type="com.wireguard.android.model.Tunnel" />
+            type="com.wireguard.android.model.ObservableTunnel" />
 
         <variable
             name="fragment"
