--- a/app/src/main/res/layout/tunnel_detail_fragment.xml
+++ b/app/src/main/res/layout/tunnel_detail_fragment.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <import type="com.wireguard.android.model.Tunnel.State" />
+        <import type="com.wireguard.android.backend.Tunnel.State" />
 
         <import type="com.wireguard.android.util.ClipboardUtils" />
 
@@ -15,7 +15,7 @@
 
         <variable
             name="tunnel"
-            type="com.wireguard.android.model.Tunnel" />
+            type="com.wireguard.android.model.ObservableTunnel" />
 
         <variable
             name="config"
