--- a/app/src/main/res/layout/tunnel_list_fragment.xml
+++ b/app/src/main/res/layout/tunnel_list_fragment.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <import type="com.wireguard.android.model.Tunnel" />
+        <import type="com.wireguard.android.model.ObservableTunnel" />
 
         <variable
             name="fragment"
@@ -17,7 +17,7 @@
 
         <variable
             name="tunnels"
-            type="com.wireguard.android.util.ObservableKeyedList&lt;String, Tunnel&gt;" />
+            type="com.wireguard.android.util.ObservableKeyedList&lt;String, ObservableTunnel&gt;" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
